Tests/CompilerTests/negative/missing-binding-ascription.hylo
//! no-std

public fun main() {
  let x
}
